--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "@ffmpeg-installer/ffmpeg": "^1.1.0",
   "adm-zip": "0.5.16",
   "axios": "^1.7.7",
-  "baileys": "git+https://github.com/AstroX10/Baileys.git",
+  "baileys":"@whiskeysockets/baileys",
   "canvas": "^2.11.2",
   "dotenv": "^16.4.5",
   "express": "^4.21.1",
